jnh shopping mall final

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,20 @@
+.nav-header{
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 20px;
+  
+}
+
+.nav-header * {
+  margin-right: 10px;
+  margin-top: 20px;
+}
+
+.burger-menu{
+  margin-left: 20px;
+}
+
 .login-button{
   display: flex;
   justify-content: flex-end;
@@ -16,16 +33,17 @@
   justify-content: center;
 }
 
-.menu-list{
+.menu{
   display: flex;
   list-style-type: none;
-  
+  margin-bottom: 50px;
   
 }
 
-.menu-list li {
+.menu li {
   padding: 10px;
 }
+
 
 .search-area{
   display: flex;
@@ -37,7 +55,7 @@
   right: 80px;
   width: 180px;
   margin-left: 50px;
-  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .search-box input{
@@ -106,6 +124,64 @@ input:focus ~ span, input:valid ~ span {
   cursor: pointer;
 }
 
+.hide{
+  visibility:hidden
+}
+
+@media screen and (max-width: 63rem) {
+  .hide {
+    visibility:visible;
+  }
+  .menu {
+    display: none;
+  }
+  .search-box{
+    display: none;
+  }
+}
+
+.side-menu {
+  height: 100%;
+  width: 250px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: burlywood;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+  z-index:2
+}
+.side-menu-list button {
+  margin: 5px;
+  border: none;
+  background: none;
+  width: 120px;
+}
+
+.side-menu .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+  border: none;
+  background: none;
+}
+
+.side-menu-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.side-menu-list button:hover {
+  background-color: beige;
+  border-radius: 3px;
+} 
+
+
 .product-img{
   display: flex;
   justify-content: flex-end;
@@ -122,3 +198,5 @@ input:focus ~ span, input:valid ~ span {
   color: white;
   cursor: pointer;
 }
+
+
